// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strategy column metadata > matches the call snapshot 1`] = `
[
  {
    "abbrev": false,
    "heatmap": false,
    "id": "strike_cents",
    "info": "Call strike. Listed when open interest is at least 5 and the moneyness filter matches.",
    "label": "Strike",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "call_bid_cents",
    "info": "Call bid. Premium (net) is 100 × (bid − intrinsic).",
    "label": "Bid",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "call_ask_cents",
    "info": "Call ask. Shown with the bid so you can see the spread.",
    "label": "Ask",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "call_spread_pct_tenths",
    "info": "Bid-ask spread as a percent of the midpoint.",
    "label": "Spread (%)",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "iv_pct_tenths",
    "info": "European no-dividend Black-Scholes implied volatility from the bid/ask midpoint. Blank when that midpoint is outside no-arbitrage bounds. Contracts does not scale this.",
    "label": "IV",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "call_open_interest",
    "info": "Call open interest for this strike and expiration.",
    "label": "OI",
  },
  {
    "abbrev": false,
    "heatmap": true,
    "id": "net_premium_cents",
    "info": "Time value received: 100 × (bid − intrinsic). Intrinsic is max(0, current − strike) for calls and max(0, strike − current) for puts. Contracts multiplies this.",
    "label": "Premium (net)",
  },
  {
    "abbrev": true,
    "heatmap": true,
    "id": "net_apr_pct_tenths",
    "info": "APR from one-contract net capital: (net premium / (100 × (current − bid))) × 365 / DTE.",
    "label": "APR (net)",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "breakeven_cents",
    "info": "Breakeven stock price: current − call bid. Contracts does not scale this.",
    "label": "Breakeven",
  },
  {
    "abbrev": true,
    "heatmap": true,
    "id": "breakeven_change_pct_tenths",
    "info": "Percent the stock must rise from the current price to the strike before assignment. Negative when the stock is already above the strike. Contracts does not scale this.",
    "label": "% to assignment",
  },
]
`;

exports[`strategy column metadata > matches the put snapshot 1`] = `
[
  {
    "abbrev": false,
    "heatmap": false,
    "id": "strike_cents",
    "info": "Put strike. Listed when open interest is at least 5 and the moneyness filter matches.",
    "label": "Strike",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "put_bid_cents",
    "info": "Put bid. Premium (net) is 100 × (bid − intrinsic).",
    "label": "Bid",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "put_ask_cents",
    "info": "Put ask. Shown with the bid so you can see the spread.",
    "label": "Ask",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "put_spread_pct_tenths",
    "info": "Bid-ask spread as a percent of the midpoint.",
    "label": "Spread (%)",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "iv_pct_tenths",
    "info": "European no-dividend Black-Scholes implied volatility from the bid/ask midpoint. Blank when that midpoint is outside no-arbitrage bounds. Contracts does not scale this.",
    "label": "IV",
  },
  {
    "abbrev": true,
    "heatmap": false,
    "id": "put_open_interest",
    "info": "Put open interest for this strike and expiration.",
    "label": "OI",
  },
  {
    "abbrev": false,
    "heatmap": true,
    "id": "net_premium_cents",
    "info": "Time value received: 100 × (bid − intrinsic). Intrinsic is max(0, current − strike) for calls and max(0, strike − current) for puts. Contracts multiplies this.",
    "label": "Premium (net)",
  },
  {
    "abbrev": true,
    "heatmap": true,
    "id": "net_apr_pct_tenths",
    "info": "APR from one-contract net capital: (net premium / (100 × (strike − bid))) × 365 / DTE.",
    "label": "APR (net)",
  },
  {
    "abbrev": false,
    "heatmap": false,
    "id": "breakeven_cents",
    "info": "Assigned breakeven: strike − put bid. Contracts does not scale this.",
    "label": "Breakeven",
  },
  {
    "abbrev": true,
    "heatmap": true,
    "id": "breakeven_change_pct_tenths",
    "info": "Percent the stock must fall from the current price to the strike before assignment. Negative when the stock is already below the strike. Contracts does not scale this.",
    "label": "% to assignment",
  },
]
`;
